# mae-from-scratch

./: .gitignore  mae_overview_presentation_script.md  mae_presentation_script.md  main.py  pyproject.toml
notebook/: demo_lightning.ipynb  mae.ipynb  overview.ipynb
scripts/: eval_classification.py  eval_detection.py  eval_segmentation.py  infer_classification.py  infer_detection.py  infer_segmentation.py  train_classification.py  train_detection.py  train_segmentation.py
src/mae/: __init__.py  classification.py  detection.py  encoder.py  segmentation.py
